<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    >
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/name_label"
	    android:textSize="10pt"
	    />
	
	
	<EditText android:id="@+id/problem_name"
			android:text="@string/problem_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
			android:singleLine="true"
			android:enabled="true"/>

	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/details_label"
	    android:textSize="10pt"
	    />
	
	<EditText android:id="@+id/problem_details"
			android:text="@string/problem_details"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
			android:singleLine="true"
			android:enabled="true"/>

	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/area_label"
	    android:textSize="10pt"
	    />
	
	<Spinner android:id="@+id/area"
		 android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    />

<!--	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/rating_label"
	    android:textSize="10pt"
	    />
	
 <Spinner android:id="@+id/rating"
		 android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    />
	 -->	
	 
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/longitude_label"
	    android:textSize="10pt"
	    />
	
	<EditText android:id="@+id/problem_longitude"
		 android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/zero_point_zero"
	    />
	
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/latitude_label"
	    android:textSize="10pt"
	    />
	
	<EditText android:id="@+id/problem_latitude"
		 android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/zero_point_zero"
	/>
	
	<Button android:id="@+id/update_problem_location"
           android:text="@string/update_location"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content" 
	/>
	
	<Button android:id="@+id/edit_problem_location"
           android:text="@string/edit_location"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content" 
	/>
	
	<!--
	<Button android:id="@+id/take_picture"
           android:text="@string/take_picture"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content" 
	/>
	
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/pictures_label"
	    android:textSize="10pt"
	/>
	
	<Button android:id="@+id/create_problem"
            android:text="@string/create_problem"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
	/>
		
	-->
	</LinearLayout>
</ScrollView>