<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/longitude_label"
	    android:textSize="10pt"
	    />
	
	<EditText android:id="@+id/location_longitude"
		 android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    />
	
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/latitude_label"
	    android:textSize="10pt"
	    />

	<EditText android:id="@+id/location_latitude"
		 android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	/>
	
	<Button android:id="@+id/update_location"
           android:text="@string/update_location"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content" 
	/>
	
	<Button android:id="@+id/edit_location"
           android:text="@string/edit_location"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content" 
	/>
	
</LinearLayout>
	