<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
		<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/welcome"
		    android:textSize="10pt"
		    />
		    
		<Button android:id="@+id/map_button"
	            android:text="@string/map"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" 
    			android:textSize="28dip"
			/>
		    
		    
		<Button android:id="@+id/areas_button"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" 
    			android:textSize="28dip"
			/>
		    
		    
		<Button android:id="@+id/problems_button"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" 
    			android:textSize="28dip"
			/>
			
			
		<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
			android:id="@+id/sync_warning_text"
		    android:textColor="#FF0000"/>	
		<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/instructions"
		    android:textSize="10pt"
		    />
			
		    <!-- not used for anything -->
		
		<ListView android:id="@android:id/list"
		    android:layout_width="fill_parent" 
		    android:layout_height="0dip"
		    android:layout_weight="0"
		    android:drawSelectorOnTop="false"/>
    
	</LinearLayout>
</ScrollView>
